change background color

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 #Please use the main menu items under the "text"
-- text: About Us
+- text: 当社について
   url: /about
 - text: Scrumトレーニング
   url: /services
