replaced with company name and changed services

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@
     url: https://www.danielteng.com/courses/aha-cspo/
   - text: AHA認定スクラムプロダクトオーナーコース（AHA CSPO）
     url: https://www.danielteng.com/courses/csm/
+  - text: BTS スタートアップ ワークショップ
+    url: https://www.danielteng.com/courses/bts/
 - text: 電車とバスの予約 
   url: /portfolios
   submenu:
