rename cspo template

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
   - text: 目覚めの認定スクラムマスターコース（Awakening CSM）
     url: https://www.danielteng.com/courses/aha-cspo/
   - text: AHA認定スクラムプロダクトオーナーコース（AHA CSPO）
-    url: https://www.danielteng.com/courses/csm/
+    url: /services/aha_cspo
   - text: BTS スタートアップ ワークショップ
     url: https://www.danielteng.com/courses/bts/
 - text: 海外電車とバスの予約ビジネス 
