add bts internal link to menu

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
   - text: AHA認定スクラムプロダクトオーナーコース（AHA CSPO）
     url: /services/aha_cspo
   - text: BTS スタートアップ ワークショップ
-    url: https://www.danielteng.com/courses/bts/
+    url: /services/bts
 - text: 海外電車とバスの予約ビジネス 
   url: /portfolios
   submenu:
