--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,8 @@ site_preloader: true
 collections:
   services:
     output: true
+  portfolios:
+    output: true
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
