translate services.html

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 
   en: "Wowsei Dynamics Inc."
   ja: "セレンディピティ株式会社"
-email: "daniel@wowsei.com"
+email: "info@wowsei.com"
 description:  
   en: Welcome to the official website of Wowsei Dynamics Inc.! We are headquartered in California and provide two services. One is Scrum Alliance's CSM (Certified Scrum Master) & CSPO (Certified Scrum Product Owner) course. The other is travel-related products and services for Japanese overseas travelers. We guarantee professional growth and a wonderful journey..
   ja: セレンディピティ株式会社の公式ウェブサイトへようこそ！東京に本社を構え、2つのサービスを提供しています。1つはScrum AllianceのCSM(Certified Scrum Master)＆CSPO(Certified Scrum Product Owner)コース。もう1つは日本人海外旅行者向けの旅行関連商品とサービスです。プロの成長と素晴らしい旅をお約束します。
