--- a/_data/en/data.yml
+++ b/_data/en/data.yml
@@ -1,4 +1,9 @@
 home: Home
 contact: Contact
+journey: Kick start a journey filled with serendipity!
+courses: Agile&Scrum Courses
+csm_description: The Awakening Certified Scrum Master Course (Awakening CSM) focuses on amplifying individual, team, and organizational effectiveness.
+cspo_description: The AHA Certified Scrum Product Owner Course (AHA CSPO) focuses on how extreme innovation works, the tools, processes, and principles of innovation.
+bts_description: The BTS Startup Workshop will take you through the lifecycle of business incubation, liftoff, and iteration. Understand the role technology, product design, operations, business methodologies, big data analytics, AI, and learning play in growing your business. You'll also learn how to tie it all together by implementing a real business product in 3 days.
 
  
