--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -1,4 +1,7 @@
 home: ホーム
 contact: お問い合わせ
-
- 
+journey: セレンディピティに満ちた旅を始めましょう！
+courses: アジャイルおよびスクラムコース
+csm_description: 目覚めの認定スクラムマスターコース（Awakening CSM）では、個人、チーム、および組織の効果を最大化することに焦点を当てています。
+cspo_description: AHA認定スクラムプロダクトオーナーコース（AHA CSPO）では、極限のイノベーションがどのように機能するか、イノベーションのツール、プロセス、原則に焦点を当てています。
+bts_description: BTSスタートアップワークショップは、ビジネス育成、リフトオフ、AI、そしてイテレーションのライフサイクルを経験します。テクノロジー、プロダクトデザイン、運用、ビジネス手法、ビッグデータ分析、学習がビジネスの成長に果たす役割を理解することができます。また、3日間で実際のビジネス製品を実装することで、これらすべてを結び付ける方法を学ぶことができます。
