--- a/_data/en/data.yml
+++ b/_data/en/data.yml
@@ -2,8 +2,12 @@ home: Home
 contact: Contact
 journey: Kick start a journey filled with serendipity!
 courses: Agile&Scrum Courses
+csm_title: Awakening Certified Scrum Master Course (Awakening CSM)
+cspo_title: AHA Certified Scrum Product Owner Course (AHA CSPO)
+bts_title:  BTS Startup Workshop
 csm_description: The Awakening Certified Scrum Master Course (Awakening CSM) focuses on amplifying individual, team, and organizational effectiveness.
 cspo_description: The AHA Certified Scrum Product Owner Course (AHA CSPO) focuses on how extreme innovation works, the tools, processes, and principles of innovation.
+cspo_long_description: AHA Certified Scrum Product Owner Course (AHA CSPO) Product development has two important parts - Discovery and Delivery Discovery is the process of exploring and validating ideas for exponential growth. It means iteratively improving, and disseminating these ideas. Delivery is about ensuring the implementation of ideas with development teams, releasing in stages and iteratively, and identifying MVPs (minimum value products) to release as quickly as possible. means. We will learn about Discovery and Delivery processes, tools, practices, and activities (meetings) and how to leverage them as a Scrum Product Owner. In this course, we will try to answer the following questions, As a product owner, what helpful product development processes, tools, and practices do you have? What are the expected outcomes? What are the common pitfalls? ...
 bts_description: The BTS Startup Workshop will take you through the lifecycle of business incubation, liftoff, and iteration. Understand the role technology, product design, operations, business methodologies, big data analytics, AI, and learning play in growing your business. You'll also learn how to tie it all together by implementing a real business product in 3 days.
 
  
