--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -4,4 +4,5 @@ journey: セレンディピティに満ちた旅を始めましょう！
 courses: アジャイルおよびスクラムコース
 csm_description: 目覚めの認定スクラムマスターコース（Awakening CSM）では、個人、チーム、および組織の効果を最大化することに焦点を当てています。
 cspo_description: AHA認定スクラムプロダクトオーナーコース（AHA CSPO）では、極限のイノベーションがどのように機能するか、イノベーションのツール、プロセス、原則に焦点を当てています。
+cspo_long_description: AHA認定スクラムプロダクトオーナーコース（AHA CSPO） 製品開発には2つの重要な部分があります - ディスカバリー（Discovery）とデリバリー(Delivery) ディスカバリーとは、指数的な成長を目指すアイデアを探求し、アイデアを検証し、繰り返し改善し、そしてこれらのアイデアを広めることを意味します。 デリバリーとは、開発チームとアイデアの実装を確実にすること、段階的かつ反復的にリリースを行うこと、可能な限り早くリリースするためにMVP（最小限の価値を持つ製品）を特定することを意味します。 私たちはDiscoveryとDeliveryのプロセス、ツール、実践、活動（ミーティング）について学び、それらをScrumプロダクトオーナーとしてどのように活用するかを学びます。 このコースの中で、以下の質問に答えようとします： プロダクトオーナーとして、どのような役立つ製品開発のプロセス、ツール、実践がありますか？期待される成果は何ですか？よくある落とし穴は何ですか？...
 bts_description: BTSスタートアップワークショップは、ビジネス育成、リフトオフ、AI、そしてイテレーションのライフサイクルを経験します。テクノロジー、プロダクトデザイン、運用、ビジネス手法、ビッグデータ分析、学習がビジネスの成長に果たす役割を理解することができます。また、3日間で実際のビジネス製品を実装することで、これらすべてを結び付ける方法を学ぶことができます。
