--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -1,8 +1,14 @@
 home: ホーム
 contact: お問い合わせ
+more: もっと
 journey: セレンディピティに満ちた旅を始めましょう！
 courses: アジャイルおよびスクラムコース
 csm_description: 目覚めの認定スクラムマスターコース（Awakening CSM）では、個人、チーム、および組織の効果を最大化することに焦点を当てています。
 cspo_description: AHA認定スクラムプロダクトオーナーコース（AHA CSPO）では、極限のイノベーションがどのように機能するか、イノベーションのツール、プロセス、原則に焦点を当てています。
 cspo_long_description: AHA認定スクラムプロダクトオーナーコース（AHA CSPO） 製品開発には2つの重要な部分があります - ディスカバリー（Discovery）とデリバリー(Delivery) ディスカバリーとは、指数的な成長を目指すアイデアを探求し、アイデアを検証し、繰り返し改善し、そしてこれらのアイデアを広めることを意味します。 デリバリーとは、開発チームとアイデアの実装を確実にすること、段階的かつ反復的にリリースを行うこと、可能な限り早くリリースするためにMVP（最小限の価値を持つ製品）を特定することを意味します。 私たちはDiscoveryとDeliveryのプロセス、ツール、実践、活動（ミーティング）について学び、それらをScrumプロダクトオーナーとしてどのように活用するかを学びます。 このコースの中で、以下の質問に答えようとします： プロダクトオーナーとして、どのような役立つ製品開発のプロセス、ツール、実践がありますか？期待される成果は何ですか？よくある落とし穴は何ですか？...
 bts_description: BTSスタートアップワークショップは、ビジネス育成、リフトオフ、AI、そしてイテレーションのライフサイクルを経験します。テクノロジー、プロダクトデザイン、運用、ビジネス手法、ビッグデータ分析、学習がビジネスの成長に果たす役割を理解することができます。また、3日間で実際のビジネス製品を実装することで、これらすべてを結び付ける方法を学ぶことができます。
+travel_support: 海外でよりエコフレンドリーかつ安く旅行できるようにサポートします。
+train_booking_description_1: 海外に旅行する際、ヨーロッパ全域（ドイツ、イタリア、スイス、フランス、イングランド、スペイン、オーストリア、スウェーデン、フィンランド、ノルウェー、ポーランド、チェコ共和国など）、アジア諸国（韓国、中国、台湾を含む）、アメリカ諸国（アメリカ合衆国、カナダ、ブラジルを含む）の電車、バス、フェリーのチケットを検索して予約することができます。
+train_booking_description_2: 日本語を使用してチケットを検索や予約ができます。施設やチケットのルールなどの情報も全て日本語で提供されています。
+train_booking_description_3: 日本の出境旅行市場向けに、最も手頃で充実した海外の電車、バス、フェリーのチケットを提供しています。
+train_booking_description_4: 海外への旅行者は、観光名所のチケット、ライブイベントのチケット、ツアーパッケージなどさまざまなチケットを購入することができます。
