--- a/_data/ja/navigation.yml
+++ b/_data/ja/navigation.yml
@@ -13,9 +13,9 @@
 - text: 海外電車とバスの予約ビジネス 
   url: /ja/portfolios
   submenu:
-  - text: 旅行代理店向けの海外電車とバスの予約サービス
+  - text: 旅行代理店向けの海外電車とバスのグループチケット予約
     url: /ja/portfolios/travel_agency
-  - text: 個人旅行者向けの海外電車とバスの予約
+  - text: 個人旅行者向けの海外電車とバスのチケット
     url: /ja/portfolios/individual_traveller
   - text: OTA向け海外電車とバスの検索＆予約API統合
     url: /ja/portfolios/api
