--- a/_data/en/data.yml
+++ b/_data/en/data.yml
@@ -1,6 +1,11 @@
 home: Home
 contact: Contact
 more: More
+countries: Countries
+cities: Cities and Towns
+stations: Stations
+operators:  Train&Bus Operators
+train_busines_title: Oversea Train&Bus Booking
 journey: Kick start a journey filled with serendipity!
 courses: Agile&Scrum Courses
 csm_title: Awakening Certified Scrum Master Course (Awakening CSM)
@@ -10,11 +15,32 @@ csm_description: The Awakening Certified Scrum Master Course (Awakening CSM) foc
 cspo_description: The AHA Certified Scrum Product Owner Course (AHA CSPO) focuses on how extreme innovation works, the tools, processes, and principles of innovation.
 cspo_long_description: AHA Certified Scrum Product Owner Course (AHA CSPO) Product development has two important parts - Discovery and Delivery Discovery is the process of exploring and validating ideas for exponential growth. It means iteratively improving, and disseminating these ideas. Delivery is about ensuring the implementation of ideas with development teams, releasing in stages and iteratively, and identifying MVPs (minimum value products) to release as quickly as possible. means. We will learn about Discovery and Delivery processes, tools, practices, and activities (meetings) and how to leverage them as a Scrum Product Owner. In this course, we will try to answer the following questions, As a product owner, what helpful product development processes, tools, and practices do you have? What are the expected outcomes? What are the common pitfalls? ...
 bts_description: The BTS Startup Workshop will take you through the lifecycle of business incubation, liftoff, and iteration. Understand the role technology, product design, operations, business methodologies, big data analytics, AI, and learning play in growing your business. You'll also learn how to tie it all together by implementing a real business product in 3 days.
-travel_support: Support travelers to travel overseas more eco-friendly and affordably.
+travel_support: Enable eco-friendly and affordably oversea travel.
 train_booking_description_1: When travel abroad, they can search and book train, bus, and ferry tickets in Europe (including Germany, Italy, Switzerland, France, England, Spain, Austria, Sweden, Finland, Norway, Poland, Czech Republic, etc.), Asian countries (including South Korea, China, Taiwan), and American countries (including the United States, Canada, Brazil). 
 train_booking_description_2: You can search and book tickets using English. All information such as facilities and ticket rules is provided in English.
 train_booking_description_3: We provide the most affordable and comprehensive overseas train, bus, and ferry tickets for oversea travel market.
 train_booking_description_4: Travelers can purchase various tickets such as tickets to tourist attractions, live events, and tour packages.
-
-
- 
+travel_agency_booking: Group ticket booking for travel agencies
+individual_traveller_booking: Tickets for individual travelers
+api_integration: Search & booking API integration for OTA
+travel_products: Travel products
+contact_us: If you have any questions about Scrum courses or travel business collaboration, please feel free to contact us.
+first_name: First Name
+last_name: Last Name
+email: Email
+message: Message
+send: Send
+telephone_number: Telephone
+any_idea: Any idea?
+idea_area: If you have any questions about Scrum Alliance's CSM course, CSPO course, or want to collaborate in the travel business, please feel free to contact us.
+links: Links
+about_us: About Us
+blog: Blog
+copyright: Copyright © 2024 Wowsei Dynamics Inc. All rights reserved.
+phone: +1-626-734-9732
+phone_href: tel:+16267349732
+address: 3400 COTTAGE WAY, STE G2 SACRAMENTO, CA 95825
+why_our_courses: Why Take Our Courses?
+why_our_courses_cst_cec: Certified Scrum Trainer (CST) and Certified Enterprise Coach (CEC) will be your instructors.
+why_our_courses_region: Since 2008, we have led the journey of Agile transformation for individuals, teams, communities, and organizations in various industries in different countries such as China, Taiwan, Singapore, Hong Kong, Korea, Thailand, and Vietnam.
+why_our_courses_business: The only trainer and coach who has built actual products and businesses (Xmove). We can easily share insights and reflections on any ideas, tools, and processes, and support to promote the effect and efficiency of innovation.
