--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -3,12 +3,41 @@ contact: お問い合わせ
 more: もっと
 journey: セレンディピティに満ちた旅を始めましょう！
 courses: アジャイルおよびスクラムコース
+countries: 国
+cities: 都市と町
+stations: 駅
+operators:  交通事業者
+train_busines_title: 海外電車・バス予約
 csm_description: 目覚めの認定スクラムマスターコース（Awakening CSM）では、個人、チーム、および組織の効果を最大化することに焦点を当てています。
 cspo_description: AHA認定スクラムプロダクトオーナーコース（AHA CSPO）では、極限のイノベーションがどのように機能するか、イノベーションのツール、プロセス、原則に焦点を当てています。
 cspo_long_description: AHA認定スクラムプロダクトオーナーコース（AHA CSPO） 製品開発には2つの重要な部分があります - ディスカバリー（Discovery）とデリバリー(Delivery) ディスカバリーとは、指数的な成長を目指すアイデアを探求し、アイデアを検証し、繰り返し改善し、そしてこれらのアイデアを広めることを意味します。 デリバリーとは、開発チームとアイデアの実装を確実にすること、段階的かつ反復的にリリースを行うこと、可能な限り早くリリースするためにMVP（最小限の価値を持つ製品）を特定することを意味します。 私たちはDiscoveryとDeliveryのプロセス、ツール、実践、活動（ミーティング）について学び、それらをScrumプロダクトオーナーとしてどのように活用するかを学びます。 このコースの中で、以下の質問に答えようとします： プロダクトオーナーとして、どのような役立つ製品開発のプロセス、ツール、実践がありますか？期待される成果は何ですか？よくある落とし穴は何ですか？...
 bts_description: BTSスタートアップワークショップは、ビジネス育成、リフトオフ、AI、そしてイテレーションのライフサイクルを経験します。テクノロジー、プロダクトデザイン、運用、ビジネス手法、ビッグデータ分析、学習がビジネスの成長に果たす役割を理解することができます。また、3日間で実際のビジネス製品を実装することで、これらすべてを結び付ける方法を学ぶことができます。
-travel_support: 海外でよりエコフレンドリーかつ安く旅行できるようにサポートします。
+travel_support: 海外でよりエコフレンドリーかつ安く旅行できます。
 train_booking_description_1: 海外に旅行する際、ヨーロッパ全域（ドイツ、イタリア、スイス、フランス、イングランド、スペイン、オーストリア、スウェーデン、フィンランド、ノルウェー、ポーランド、チェコ共和国など）、アジア諸国（韓国、中国、台湾を含む）、アメリカ諸国（アメリカ合衆国、カナダ、ブラジルを含む）の電車、バス、フェリーのチケットを検索して予約することができます。
 train_booking_description_2: 日本語を使用してチケットを検索や予約ができます。施設やチケットのルールなどの情報も全て日本語で提供されています。
 train_booking_description_3: 日本の出境旅行市場向けに、最も手頃で充実した海外の電車、バス、フェリーのチケットを提供しています。
 train_booking_description_4: 海外への旅行者は、観光名所のチケット、ライブイベントのチケット、ツアーパッケージなどさまざまなチケットを購入することができます。
+travel_agency_booking: 旅行代理店向けの海外電車とバスのグループチケット予約
+individual_traveller_booking: 個人旅行者向けの海外電車とバスのチケット
+api_integration: OTA向け海外電車とバスの検索＆予約API統合
+travel_products: 旅行商品
+contact_us: スクラムコースや旅行ビジネスの連携に関するご質問がございましたら、お気軽にお問い合わせください。
+first_name: 名
+last_name: 姓
+email: メール
+message: メッセージ
+send: 
+telephone_number: 電話番号
+any_idea: 何かアイデアはありますか?
+idea_area: スクラムアライアンスのCSMコース、CSPOコースについて問い合わせたい。 または旅行事業で協力したい場合は、お気軽にお問い合わせください。
+links: 必要なリンク
+about_us: 当社について
+blog: Blog
+copyright: 著作権 © 2023-2024 セレンディピティ株式会社。全著作権所有。
+phone: +81 03 6161 6496
+phone_href: tel:+810361616496
+address: 東京都品川区北品川1-8-11 Daiwa品川Northビル
+why_our_courses: 当社のコースを受講する理由
+why_our_courses_cst_cec: 認定スクラムトレーナー（CST）および認定エンタープライズコーチ（CEC）が講師となります。
+why_our_courses_region: 08年以来、中国、台湾、シンガポール、香港、韓国、タイ、ベトナムなど、様々な国のさまざまな産業において、個人、チーム、コミュニティ、そして組織のアジャイル転換の旅を導いてきました。
+why_our_courses_business: 実際の製品とビジネス(Xmove)を構築してきた唯一のトレーナー兼コーチです。どんなアイデア、ツール、プロセスについても洞察と反省を共有することが容易であり、革新の効果と効率を促進するためのサポートができます。
