--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -41,3 +41,6 @@ why_our_courses: 当社のコースを受講する理由
 why_our_courses_cst_cec: 認定スクラムトレーナー（CST）および認定エンタープライズコーチ（CEC）が講師となります。
 why_our_courses_region: 08年以来、中国、台湾、シンガポール、香港、韓国、タイ、ベトナムなど、様々な国のさまざまな産業において、個人、チーム、コミュニティ、そして組織のアジャイル転換の旅を導いてきました。
 why_our_courses_business: 実際の製品とビジネス(Xmove)を構築してきた唯一のトレーナー兼コーチです。どんなアイデア、ツール、プロセスについても洞察と反省を共有することが容易であり、革新の効果と効率を促進するためのサポートができます。
+company: セレンディピティ株式会社
+company_slogan: ITトレーニング、コンサルティング、革新的な旅行予約システムの提供を通じて力を与える
+```
