fixed send translation

--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -26,7 +26,7 @@ first_name: 名
 last_name: 姓
 email: メール
 message: メッセージ
-send: 
+send: 送信
 telephone_number: 電話番号
 any_idea: 何かアイデアはありますか?
 idea_area: スクラムアライアンスのCSMコース、CSPOコースについて問い合わせたい。 または旅行事業で協力したい場合は、お気軽にお問い合わせください。
