--- a/_data/en/data.yml
+++ b/_data/en/data.yml
@@ -45,4 +45,4 @@ why_our_courses_cst_cec: Certified Scrum Trainer (CST) and Certified Enterprise 
 why_our_courses_region: Since 2008, we have led the journey of Agile transformation for individuals, teams, communities, and organizations in various industries in different countries such as China, Taiwan, Singapore, Hong Kong, Korea, Thailand, and Vietnam.
 why_our_courses_business: The only trainer and coach who has built actual products and businesses (Xmove). We can easily share insights and reflections on any ideas, tools, and processes, and support to promote the effect and efficiency of innovation.
 company: WoWSei Dynamics Inc.
-company_slogan: Empowering through it training, consulting, and delivering innovative travel booking systems
+company_slogan: Empowering through IT training, consulting, and delivering innovative travel booking systems
