refined wording of course description why

--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -38,7 +38,7 @@ phone: +81 03 6161 6496
 phone_href: tel:+810361616496
 address: 東京都品川区北品川1-8-11 Daiwa品川Northビル
 why_our_courses: 当社のコースを受講する理由
-why_our_courses_cst_cec: 認定スクラムトレーナー（CST）および認定エンタープライズコーチ（CEC）が講師となります。
+why_our_courses_cst_cec: あなたは、Certified Scrum Trainer（CST）とCertified Enterprise Coach（CEC）の両方の資格を持つトレーナーからトレーニングを受けることになります。彼は理論的な専門知識と実践的な経験を組み合わせた独自のトレーニングを提供します。
 why_our_courses_region: 08年以来、中国、台湾、シンガポール、香港、韓国、タイ、ベトナムなど、様々な国のさまざまな産業において、個人、チーム、コミュニティ、そして組織のアジャイル転換の旅を導いてきました。
 why_our_courses_business: 実際の製品とビジネス(Xmove)を構築してきた唯一のトレーナー兼コーチです。どんなアイデア、ツール、プロセスについても洞察と反省を共有することが容易であり、革新の効果と効率を促進するためのサポートができます。
 company: セレンディピティ株式会社
