--- a/_data/en/data.yml
+++ b/_data/en/data.yml
@@ -41,7 +41,7 @@ phone: +1-626-734-9732
 phone_href: tel:+16267349732
 address: 3400 COTTAGE WAY, STE G2 SACRAMENTO, CA 95825
 why_our_courses: Why Take Our Courses?
-why_our_courses_cst_cec: Certified Scrum Trainer (CST) and Certified Enterprise Coach (CEC) will be your instructors.
+why_our_courses_cst_cec: You will receive training from a trainer who holds both the Certified Scrum Trainer (CST) and Certified Enterprise Coach (CEC) certifications, offering a unique blend of theoretical expertise and practical experience.
 why_our_courses_region: Since 2008, we have led the journey of Agile transformation for individuals, teams, communities, and organizations in various industries in different countries such as China, Taiwan, Singapore, Hong Kong, Korea, Thailand, and Vietnam.
 why_our_courses_business: The only trainer and coach who has built actual products and businesses (Xmove). We can easily share insights and reflections on any ideas, tools, and processes, and support to promote the effect and efficiency of innovation.
 company: WoWSei Dynamics Inc.
