--- a/_data/en/data.yml
+++ b/_data/en/data.yml
@@ -46,3 +46,4 @@ why_our_courses_region: Since 2008, we have led the journey of Agile transformat
 why_our_courses_business: The only trainer and coach who has built actual products and businesses (Xmove). We can easily share insights and reflections on any ideas, tools, and processes, and support to promote the effect and efficiency of innovation.
 company: WoWSei Dynamics Inc.
 company_slogan: Empowering through IT training, consulting, and delivering innovative travel booking systems
+all: All
