translated individual train services

--- a/_data/en/data.yml
+++ b/_data/en/data.yml
@@ -47,3 +47,80 @@ why_our_courses_business: The only trainer and coach who has built actual produc
 company: WoWSei Dynamics Inc.
 company_slogan: Empowering through IT training, consulting, and delivering innovative travel booking systems
 all: All
+booking_site: Website
+booking_app: Xmove App
+individual_traveller_description_web: https://www.xmoveapp.com is a website catering to US travelers, specializing in ground transportation booking and information services. We provide a convenient platform where travelers can easily book train, bus, and ferry tickets in over 60 countries worldwide, spanning Europe, Asia, North America, and South America. Utilizing our website, you can effortlessly plan your travels from the US to destinations abroad by arranging local transportation and exploring route options. With our site available in English, it's tailored for US travelers, ensuring easy access to essential information. Additionally, xmoveapp.com offers comprehensive details such as train and bus schedules, service updates, and seat availability, providing travelers with peace of mind during their journeys. Our aim at xmoveapp.com is to enhance the outbound travel experience for US travelers by delivering convenient and reliable ground transportation booking services. Join us in creating unforgettable travel experiences together.
+travel_agency_description_web: www.Xmoveapp.com is a website targeting US travelers, specializing in ground transportation booking and information provision. We offer a convenient service where travelers can easily book train, bus, and ferry tickets in over 60 countries worldwide, including Europe, Asia, North America, and South America. By using our website, you can easily plan your travel from the US to overseas destinations by booking local transportation and searching for routes. Our website is available in English, making it user-friendly for US travelers to access necessary information easily. Moreover, xmoveapp.com provides detailed information for travelers, including train and bus schedules, service status, and seat availability, ensuring travelers can enjoy their trips with peace of mind. Our goal at xmoveapp.com is to make outbound travel for US travelers more comfortable and seamless by providing convenient and reliable ground transportation booking services. Join us in creating fantastic travel experiences together.
+app_description_web: The Xmove app is a ground transportation booking app designed for travelers from the USA. We provide a convenient service where you can easily book train, bus, and ferry tickets in over 60 countries worldwide, including Europe, Asia, North America, and South America. By using the Xmove app, you can easily plan your travels from the USA to destinations abroad by booking local transportation and searching for routes. Our website is available in Japanese, making it user-friendly for Japanese travelers to access necessary information easily. Additionally, the Xmove app provides detailed information for travelers, including train and bus schedules, service updates, and seat availability, ensuring travelers can enjoy their trips with peace of mind. Furthermore, with easy payment options within the app, reservations can be completed hassle-free. The Xmove app aims to make outbound travel for travelers from the USA more comfortable and seamless. We are here to support your travel and provide you with an outstanding travel experience. Use the Xmove app and enjoy your travels around the world to the fullest.
+ultimate_guides: Ultimate Guides for Trains in Each Country
+uk_rail: UK Rail System Ultimate Guide
+uk_rail_url: https://help.g2rail.com/railways/national-rail
+de_rail: Germany Federal Railways Ultimate Guide
+de_rail_url: https://help.g2rail.com/railways/db
+austria_rail: Austria Railways Ultimate Guide
+australia_rail_url: https://help.g2rail.com/railways/%C3%B6bb
+italy_rail: Italy Railways Ultimate Guide
+italy_rail_url: https://help.g2rail.com/railways/trenitalia
+spain_rail: Spain Railways Ultimate Guide
+spain_rail_url: https://help.g2rail.com/railways/renfe
+france_rail: France Railways Ultimate Guide
+france_rail_url: https://help.g2rail.com/railways/sncf
+bene_rail: Benelux (Netherlands, Belgium, Luxembourg) Railways Ultimate Guide
+bene_rail_url: https://help.g2rail.com/railways/bene
+italo_rail: Italo Railways Ultimate Guide
+italo_rail_url: https://help.g2rail.com/railways/ntv
+flixbus_rail: Flixbus / FlixTrain Ultimate Guide
+flixbus_rail_url: https://help.g2rail.com/railways/flixbus
+poland_rail: Poland Railways Ultimate Guide
+poland_rail_url: https://help.g2rail.com/railways/poland-polskie-koleje
+nsb_rail: Norway Railways Ultimate Guide
+nsb_rail_url: https://help.g2rail.com/railways/norway-nsb
+rzd_rail: Russia Railways Ultimate Guide
+rzd_rail_url: https://help.g2rail.com/railways/russia-railway
+vr_rail: Finland Railways Ultimate Guide
+vr_rail_url: https://help.g2rail.com/railways/finland-vr
+cr_rail: China Railways Ultimate Guide
+cr_rail_url: https://help.g2rail.com/railways/china-railway
+korail_rail: Korea Railways Ultimate Guide
+korail_rail_url: https://help.g2rail.com/railways/korail
+sj_rail:  Sweden Railways Ultimate Guide
+sj_rail_url: https://help.g2rail.com/railways/sweden-statens-j%C3%A4rnv%C3%A4gar
+taiwan_rail: Taiwan High Speed Railways Ultimate Guide
+taiwan_rail_url: https://help.g2rail.com/railways/taiwan-high-speed-rail
+station_guides: Main Stations in Each Country
+europe: Europe
+germany_stations:  Main Stations in Germany
+berlin_station: Berlin Central Station
+berlin_station_url: https://help.g2rail.com/stations/berlin-hbf
+frankfurt_station: Frankfurt Central Station
+frankfurt_station_url: https://help.g2rail.com/stations/frankfurt-hbf]
+frankfurt_airport_station: Frankfurt Airport Station
+frankfurt_airport_station_url: https://www.g2rail.com/help/stations/frankfurtm-flughafen-fernbf
+hamburg_station: Hamburg Central Station
+hamburg_station_url: https://help.g2rail.com/stations/hamburg-hbf
+munich_station: Munich Central Station
+munich_station_url: https://help.g2rail.com/stations/m%C3%BCnchen-hbf
+hannover_station: Hannover Central Station
+hannover_station_url: https://help.g2rail.com/stations/hannover-hbf
+koln_station: Cologne Central Station
+koln_station_url: https://help.g2rail.com/stations/k%C3%B6ln-hbf
+italy_stations: Main Stations in Italy
+roma_termini: Rome Termini Station
+roma_termini_url: https://help.g2rail.com/stations/roma-termini
+napoli_c: Naples Central Station
+napoli_c_url: https://help.g2rail.com/stations/napoli-centrale
+milano_c: Milan Central Station
+milano_c_url: https://help.g2rail.com/stations/milano-centrale
+roma_airport: Rome Fiumicino Airport
+roma_airport_url: https://help.g2rail.com/stations/fiumicino-aeroporto-roma
+torino_station: Turin Porta Nuova Station
+torino_station_url: https://help.g2rail.com/stations/torino-porta-nuova
+pisa_c: Pisa Central Station
+pisa_c_url: https://help.g2rail.com/stations/pisa-centrale
+venice_station: Venice Santa Lucia Central Station
+venice_station_url: https://help.g2rail.com/stations/venezia-s.-lucia
+malpensa_airport: Milan Malpensa Airport
+malpensa_airport_url: https://help.g2rail.com/stations/malpensa-aeroporto
+florence_station: Florence Santa Maria Novella Central Station
+florence_station_url: https://help.g2rail.com/stations/firenze-santa-maria-novella
+
