translated api and group booking

--- a/_data/en/data.yml
+++ b/_data/en/data.yml
@@ -123,4 +123,8 @@ malpensa_airport: Milan Malpensa Airport
 malpensa_airport_url: https://help.g2rail.com/stations/malpensa-aeroporto
 florence_station: Florence Santa Maria Novella Central Station
 florence_station_url: https://help.g2rail.com/stations/firenze-santa-maria-novella
+api_description_1: We provide API integration services for online travel agencies. API integration means seamlessly integrating our train, bus, and ferry reservation system into travel agency websites and applications.
+api_description_2: By using our API integration services, OTAs can easily and quickly provide users with local transportation reservations. Travel agencies can provide users with convenient train, bus, and ferry reservation experiences through their websites and apps, and offer more travel products.
+api_description_3: Our API integration is flexible and can be customized to meet the needs of travel agencies. We also focus on API security and stability, ensuring the privacy and information security of users.
+api_description_4: Let's leverage the power of API integration together to support the growth and success of Japanese OTAs. New possibilities for providing great travel experiences will open up.
 
