--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -120,4 +120,7 @@ malpensa_airport: ミラノマルペンサ空港
 malpensa_airport_url: https://help.g2rail.com/ja/stations/malpensa-aeroporto
 florence_station: フィレンツェサンタマリアノヴェッラ
 florence_station_url: https://help.g2rail.com/ja/stations/firenze-santa-maria-novella
-
+api_description_1: 私たちは日本のオンライン旅行代理店向けにAPI統合サービスを提供しています。API統合は、旅行代理店のウェブサイトやアプリケーションに、弊社の列車・バス・フェリーの予約システムをシームレスに統合することを意味します。
+api_description_2: 私たちのAPI統合サービスを利用することで、日本のOTAは簡単かつ迅速に、ユーザーに対して地域の交通機関の予約を提供することができます。旅行代理店は自社のウェブサイトやアプリを通じて、ユーザーに対して便利な列車・バス・フェリーの予約体験を提供し、より多くの旅行商品を提供することが可能になります。
+api_description_3: また、私たちのAPI統合は柔軟性があり、旅行代理店のニーズに合わせてカスタマイズできます。さらに、APIのセキュリティや安定性にも重点を置き、ユーザーのプライバシーと情報の安全性を保障します。
+api_description_4: 日本のOTAの成長と成功をサポートするために、私たちと一緒にAPI統合の力を活用しましょう。素晴らしい旅行体験を提供する新しい可能性が広がります。
