fixed broken link of courses

--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -124,3 +124,5 @@ api_description_1: 私たちは日本のオンライン旅行代理店向けにA
 api_description_2: 私たちのAPI統合サービスを利用することで、日本のOTAは簡単かつ迅速に、ユーザーに対して地域の交通機関の予約を提供することができます。旅行代理店は自社のウェブサイトやアプリを通じて、ユーザーに対して便利な列車・バス・フェリーの予約体験を提供し、より多くの旅行商品を提供することが可能になります。
 api_description_3: また、私たちのAPI統合は柔軟性があり、旅行代理店のニーズに合わせてカスタマイズできます。さらに、APIのセキュリティや安定性にも重点を置き、ユーザーのプライバシーと情報の安全性を保障します。
 api_description_4: 日本のOTAの成長と成功をサポートするために、私たちと一緒にAPI統合の力を活用しましょう。素晴らしい旅行体験を提供する新しい可能性が広がります。
+csm_description_1: 製品開発は、**ディスカバリー（Discovery）**と**デリバリー（Delivery）**の二つの部分に分かれて、交互に進行します。探求とは、指数的な成長のアイデアを見つける方法や、これらの創造的なアイデアをソーシャルネットワークを利用して拡散・拡大させる方法を指します。デリバリーとは、線形的な成長を確保する方法や、アイデアを効率的に実装する方法、検証する方法、実施する方法、MVP（最小限の価値を持つ製品）を見つける方法、Scrumなどのアジャイル方法と組み合わせる方法、そして反復する方法を指します。これらは相互補完的で切り離せない二つの部分です。CSMコースでは、デリバリーの要素に重点を置きつつ、製品の持続的な革新を確保するための組織的要素も探求します。
+agenda: アジェンダ
