--- a/_data/ja/navigation.yml
+++ b/_data/ja/navigation.yml
@@ -19,6 +19,8 @@
     url: /ja/portfolios/individual_traveller
   - text: OTA向け海外電車とバスの検索＆予約API統合
     url: /ja/portfolios/api
+- text: アプリダウンロード
+  url: /ja/xmove-app
 # - text: ブログ
 #   url: /ja/blog
 #   submenu:
