--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,9 @@ collections:
 #   - vendor/gems/
 #   - vendor/ruby/
 
+include:
+  - ja
+
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
 # The values here represent the defaults if nothing is set
