--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ plugins:
   - jekyll-feed
   - jekyll-paginate-v2
   - jekyll-archives
+  - jekyll-polyglot
 
 facebook_url: "https://www.facebook.com/tengzhenyu"
 twitter_url: "https://twitter.com/danielteng"
