--- a/_data/ja/navigation.yml
+++ b/_data/ja/navigation.yml
@@ -20,7 +20,7 @@
   - text: OTA向け海外電車とバスの検索＆予約API統合
     url: /ja/portfolios/api
 - text: アプリダウンロード
-  url: /ja/xmove-app
+  url: /ja/serenditipy-app
 # - text: ブログ
 #   url: /ja/blog
 #   submenu:
