fixed English in individual traveller page

--- a/_data/ja/data.yml
+++ b/_data/ja/data.yml
@@ -92,7 +92,7 @@ sj_rail: スウェーデン国鉄の究極のガイド
 sj_rail_url: https://help.g2rail.com/ja/railways/sweden-statens-j%C3%A4rnv%C3%A4gar
 taiwan_rail: 台湾鉄道の究極のガイド
 taiwan_rail_url: https://help.g2rail.com/ja/railways/taiwan-high-speed-rail
-station_guides: Tickets, maps, departure and arrival information, guides, routes for major stations in each country.
+station_guides: 各国の主要駅のチケット、地図、発着情報、ガイド、ルート
 europe: ヨーロッパ
 germany_stations: ドイツの主要駅
 berlin_station: ベルリン中央駅
